--- a/src/transform_window.ui
+++ b/src/transform_window.ui
@@ -3,8 +3,8 @@
   <requires lib="gtk" version="4.0" />
   <requires lib="libadwaita" version="1.0" />
   <template class="TransformWindow" parent="AdwWindow">
-    <property name="title">Transform Data</property>
-    <property name="default-width">256</property>
+    <property name="title">Add Equation</property>
+    <property name="default-width">425</property>
     <property name="default-height">125</property>
     <child>
       <object class="GtkShortcutController">
@@ -21,95 +21,57 @@
         <property name="orientation">vertical</property>
         <child>
           <object class="GtkHeaderBar" id="header_bar">
-     </object>
+          </object>
         </child>
         <child>
-          <object class="GtkGrid" id="my_grid">
-            <child>
-              <object class="GtkLabel" id="transform_x_label">
-                <property name="label">X = </property>
-                <property name="margin-top">10</property>
-                <property name="margin-end">1</property>
-                <property name="margin-start">10</property>
-                <layout>
-                  <property name="column">0</property>
-                  <property name="row">1</property>
-                  <property name="column-span">1</property>
-                </layout>
-              </object>
-            </child>
-            <child>
-              <object class="GtkEntry" id="transform_x_entry">
-                <property name="margin-top">10</property>
-                <property name="text">X</property>
-                <property name="margin-end">10</property>
-                <layout>
-                  <property name="column">1</property>
-                  <property name="row">1</property>
-                  <property name="column-span">1</property>
-                </layout>
-              </object>
-            </child>
-            <child>
-              <object class="GtkLabel" id="transform_y_label">
-                <property name="label">Y = </property>
-                <property name="margin-top">5</property>
-                <property name="margin-end">1</property>
-                <property name="margin-start">10</property>
-                <layout>
-                  <property name="column">0</property>
-                  <property name="row">2</property>
-                  <property name="column-span">1</property>
-                </layout>
-              </object>
-            </child>
-            <child>
-              <object class="GtkEntry" id="transform_y_entry">
-                <property name="margin-top">5</property>
-                <property name="margin-end">10</property>
-                <property name="text">Y</property>
-                <property name="hexpand">true</property>
-                <layout>
-                  <property name="column">1</property>
-                  <property name="row">2</property>
-                  <property name="column-span">1</property>
-                </layout>
-              </object>
-            </child>
-            <child>
-              <object class="GtkScrolledWindow">
-                <property name="height-request">150</property>
-                <property name="width-request">375</property>"
-          <property name="hexpand">true</property>
-                <property name="vexpand">true</property>
-                <property name="margin-top">6</property>
-                <property name="margin-bottom">6</property>
-                <property name="margin-start">6</property>
-                <property name="margin-end">6</property>
+          <object class="AdwPreferencesGroup">
+            <property name="visible">True</property>
+            <property name="can-focus">True</property>
+            <property name="title" translatable="yes">Transform data</property>
+            <property name="description" translatable="yes"> The transformation tool uses Numpy notation, with capital letters for the coordinates.
+
+Transformations are done piece-wise, if you want access to the entire range use X_range or Y_range. e.g. Y = Y/max(X_range) divides each Y value by the largest value of X.
+
+To convert radians to degrees use degrees(value).</property>
+            <property name="margin-start">30</property>"
+                        <property name="margin-end">30</property>
+            <property name="margin-top">30</property>
+            <property name="margin-bottom">30</property>""
+        <child>
+              <object class="AdwActionRow">
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="title" translatable="yes">X =</property>
+                <property name="subtitle" translatable="yes">The transformation on the X-axis</property>
+                <property name="use-underline">True</property>
                 <child>
-                  <object class="GtkTextView" id="transform_info">
-                    <property name="editable">false</property>
+                  <object class="GtkEntry" id="transform_x_entry">
+                    <property name="text">X</property>
+                    <property name="valign">center</property>
                   </object>
                 </child>
-                <layout>
-                  <property name="column">0</property>
-                  <property name="row">0</property>
-                  <property name="column-span">2</property>
-                </layout>
+              </object>
+            </child>
+            <child>
+              <object class="AdwActionRow">
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="title" translatable="yes">Y =</property>
+                <property name="subtitle" translatable="yes">The transformation on the Y-axis</property>
+                <property name="use-underline">True</property>
+                <child>
+                  <object class="GtkEntry" id="transform_y_entry">
+                    <property name="text">Y</property>
+                    <property name="valign">center</property>
+                  </object>
+                </child>
               </object>
             </child>
             <child>
               <object class="GtkButton" id="transform_confirm_button">
                 <property name="label">Confirm</property>
-                <property name="action-name">app.translate_y</property>
-                <property name="margin-end">10</property>
-                <property name="margin-top">5</property>
-                <property name="margin-bottom">10</property>
-                <layout>
-                  <property name="column">1</property>
-                  <property name="row">3</property>
-                  <property name="column-span">2</property>
-                </layout>
+                <property name="margin-top">30</property>
+                <property name="margin-bottom">0</property>
               </object>
             </child>
           </object>
