--- a/src/add_data_advanced.ui
+++ b/src/add_data_advanced.ui
@@ -24,103 +24,121 @@
           </object>
         </child>
         <child>
-          <object class="AdwActionRow">
+          <object class="AdwPreferencesGroup">
+            <property name="title" translatable="yes">Open data</property>
+            <property name="description" translatable="yes">Advanced settings for importing data</property>
             <property name="visible">True</property>
             <property name="can-focus">True</property>
-            <property name="title" translatable="yes">Delimiter</property>
-            <property name="subtitle" translatable="yes">Choose the delimiter that separates the columns (\t for tab)</property>
-            <property name="use-underline">True</property>
-            <child>
-              <object class="GtkEntry" id="delimiter">
-                <property name="text">\t</property>
-                <property name="valign">center</property>
+            <property name="margin-start">30</property>"
+            <property name="margin-end">30</property>
+            <property name="margin-top">30</property>
+            <property name="margin-bottom">30</property>"
+        <child>
+              <object class="AdwActionRow">
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="title" translatable="yes">Delimiter</property>
+                <property name="subtitle" translatable="yes">Choose the delimiter that separates the columns (\t for tab)</property>
+                <property name="use-underline">True</property>
+                <child>
+                  <object class="GtkEntry" id="delimiter">
+                    <property name="text">\t</property>
+                    <property name="valign">center</property>
+                  </object>
+                </child>
               </object>
             </child>
-          </object>
-        </child>
-        <child>
-          <object class="AdwActionRow">
-            <property name="visible">True</property>
-            <property name="can-focus">True</property>
-            <property name="title" translatable="yes">Decimal separator</property>
-            <property name="subtitle" translatable="yes">Choose which character to use as a decimal separator</property>
-            <property name="use-underline">True</property>
             <child>
-              <object class="GtkEntry" id="decimal seperator">
-                <property name="text">.</property>
-                <property name="valign">center</property>
+              <object class="AdwActionRow">
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="title" translatable="yes">Decimal separator</property>
+                <property name="subtitle" translatable="yes">The character that is used as decimal separator</property>
+                <property name="use-underline">True</property>
+                <child>
+                  <object class="GtkDropDown" id="import_separator">
+                    <property name="valign">center</property>
+                    <property name="model">
+                      <object class="GtkStringList">
+                        <items>
+                          <item translatable="yes">.</item>
+                          <item translatable="yes">,</item>
+                        </items>
+                      </object>
+                    </property>
+                  </object>
+                </child>
               </object>
             </child>
-          </object>
-        </child>
-        <child>
-          <object class="AdwActionRow">
-            <property name="visible">True</property>
-            <property name="can-focus">True</property>
-            <property name="title" translatable="yes">Column X</property>
-            <property name="subtitle" translatable="yes">Choose which column to load for the X-data</property>
-            <property name="use-underline">True</property>
             <child>
-              <object class="GtkSpinButton" id="column_x">
+              <object class="AdwActionRow">
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="title" translatable="yes">Column X</property>
+                <property name="subtitle" translatable="yes">Choose which column to load for the X-data</property>
+                <property name="use-underline">True</property>
+                <child>
+                  <object class="GtkSpinButton" id="column_x">
+                    <property name="valign">center</property>
+                    <property name="adjustment">spin_button_column_x</property>
+                    <property name="numeric">True</property>
+                    <property name="value">0</property>
+                    <property name="wrap">True</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="AdwActionRow">
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
                 <property name="vexpand">False</property>
-                <property name="vexpand-set">False</property>
-                <property name="adjustment">spin_button_column_x</property>
-                <property name="numeric">True</property>
-                <property name="value">0</property>
-                <property name="wrap">True</property>
+                <property name="title" translatable="yes">Column Y</property>
+                <property name="subtitle" translatable="yes">Choose which column to load for the Y-data</property>
+                <property name="use-underline">True</property>
+                <child>
+                  <object class="GtkSpinButton" id="column_y">
+                    <property name="valign">center</property>
+                    <property name="adjustment">spin_button_column_y</property>
+                    <property name="numeric">True</property>
+                    <property name="value">1</property>
+                    <property name="wrap">True</property>
+                  </object>
+                </child>
               </object>
             </child>
-          </object>
-        </child>
-        <child>
-          <object class="AdwActionRow">
-            <property name="visible">True</property>
-            <property name="can-focus">False</property>
-            <property name="vexpand">False</property>
-            <property name="title" translatable="yes">Column Y</property>
-            <property name="subtitle" translatable="yes">Choose which column to load for the Y-data</property>
-            <property name="use-underline">True</property>
             <child>
-              <object class="GtkSpinButton" id="column_y">
+              <object class="AdwActionRow">
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
                 <property name="vexpand">False</property>
-                <property name="adjustment">spin_button_column_y</property>
-                <property name="numeric">True</property>
-                <property name="value">1</property>
-                <property name="wrap">True</property>
+                <property name="title" translatable="yes">Skip rows</property>
+                <property name="subtitle" translatable="yes">Choose how many rows to skip while loading data</property>
+                <property name="use-underline">True</property>
+                <child>
+                  <object class="GtkSpinButton" id="skip_rows">
+                    <property name="valign">center</property>
+                    <property name="adjustment">spin_button_skip_rows</property>
+                    <property name="numeric">True</property>
+                    <property name="value">1</property>
+                    <property name="wrap">True</property>
+                  </object>
+                </child>
               </object>
             </child>
-          </object>
-        </child>
-        <child>
-          <object class="AdwActionRow">
-            <property name="visible">True</property>
-            <property name="can-focus">False</property>
-            <property name="vexpand">False</property>
-            <property name="title" translatable="yes">Skip rows</property>
-            <property name="subtitle" translatable="yes">Choose how many rows to skip while loading data</property>
-            <property name="use-underline">True</property>
             <child>
-              <object class="GtkSpinButton" id="skip_rows">
-                <property name="vexpand">False</property>
-                <property name="adjustment">spin_button_skip_rows</property>
-                <property name="numeric">True</property>
-                <property name="value">1</property>
-                <property name="wrap">True</property>
+              <object class="GtkButton" id="open_advanced_confirm_button">
+                <property name="label">Open file</property>
+                <property name="margin-end">10</property>
+                <property name="margin-top">5</property>
+                <property name="margin-bottom">10</property>
+                <layout>
+                  <property name="column">1</property>
+                  <property name="row">7</property>
+                  <property name="column-span">2</property>
+                </layout>
               </object>
             </child>
-          </object>
-        </child>
-        <child>
-          <object class="GtkButton" id="add_equation_confirm_button">
-            <property name="label">Open file</property>
-            <property name="margin-end">10</property>
-            <property name="margin-top">5</property>
-            <property name="margin-bottom">10</property>
-            <layout>
-              <property name="column">1</property>
-              <property name="row">7</property>
-              <property name="column-span">2</property>
-            </layout>
           </object>
         </child>
       </object>
