--- a/src/transform_window.ui
+++ b/src/transform_window.ui
@@ -32,7 +32,7 @@
 
 Transformations are done piece-wise, if you want access to the entire range use X_range or Y_range. e.g. Y = Y/max(X_range) divides each Y value by the largest value of X.
 
-To convert radians to degrees use degrees(value).</property>
+To convert a value radians to degrees use degrees(value).</property>
             <property name="margin-start">30</property>"
                         <property name="margin-end">30</property>
             <property name="margin-top">30</property>
@@ -70,7 +70,7 @@ To convert radians to degrees use degrees(value).</property>
             <child>
               <object class="GtkButton" id="transform_confirm_button">
                 <property name="label">Confirm</property>
-                <property name="margin-top">30</property>
+                <property name="margin-top">20</property>
                 <property name="margin-bottom">0</property>
               </object>
             </child>
